trabao clase incompleto

--- a/index.html
+++ b/index.html
@@ -26,41 +26,44 @@
       </div>
       <!-- segundo container header -->
       <div class="header__container__icon">
-        <nav class="navigar__listas__icon">
+        <nav class="navegador__listas__icon">
           <ul class="listas__icon">
             <li class="lista__icon">
-              <a href="">
-                 <i class='bx bxs-home'></i>
+              <a href="#" >
+                 <i class='bx bxs-home icon '></i>
               </a>
-              <p>Inicio</p  >
+              <p class="icon__text">Inicio</p>
             </li>
             <li class="lista__icon">
-              <a href="">
-                <i class='bx bxs-group'></i>
-                <p></p>
+              <a href="#">
+                <i class='bx bxs-group icon'></i>
               </a>
+               <p class="icon__text">Mi red</p>
             </li>
             <li class="lista__icon">
-              <a href="">
-                 <i class='bx bxs-briefcase' ></i>
-                <p></p>
+              <a href="#">
+                 <i class='bx bxs-briefcase icon' ></i>
               </a>
+               <p class="icon__text">empleos</p>
             </li>
             <li class="lista__icon">
-              <a href="">
-                <i class='bx bxs-message'></i>
+              <a href="#">
+                <i class='bx bxs-message icon'></i>
               </a>
-              <p></p>
+              <p class="icon__text"> mensaje </p>
             </li>
             <li class="lista__icon">
-              <a href="">
-                <i class='bx bxs-bell' ></i>
+              <a href="#">
+                <i class='bx bxs-bell icon' ></i>
               </a>
-              <p></p>
+              <p class="icon__text">notificaciones</p>
             </li>
           </ul>
           <div class="contenedor__usuario">
-
+            <div class="perfil__activo">
+              <img src="" alt="">
+            </div>
+            <div class=""></div>
           </div>
         </nav>
       </div>
@@ -69,11 +72,21 @@
 
     </div>
 
+
   </header>
-  <div class="container__content">
-   <aside></aside>
-   <main></main>
-   <aside></aside>
+
+  <div class="container__content container">
+   <aside class="sidebar__lateral-derecho">
+    <div class="sidebar__perfil__box">
+      <!-- <img src="professionals-scaled-mejorado.png" alt="imagen" class="sidebar__perfil__imagen" > -->
+      <div></div>
+    </div>
+   </aside>
+   <main class="contenedor"></main>
+   <aside class="sidebar">
+    
+   
+   </aside>
   </div>
  
 </body>
